   * introduced `m4` macros to check during `configure` phase for the
     platform, and a `nut_bool.h` header with `nut_bool_t` type to use
     during build, to avoid the numerous definitions of Boolean types
     and values (or macros) in the NUT codebase. [issue #1176, issue #31]
   * custom `distcheck-something` targets did not inherit `DISTCHECK_FLAGS`
     properly. [#2541]

 - updated `docs/nut-names.txt` with items defined by 42ITy NUT fork. [#2339]

 - various recipe, documentation and source files were revised to address
   respective warnings issued by the new generations of analysis tools.
   [#823, #2437, link:https://github.com/networkupstools/nut-website/issues/52[nut-website issue #52]]

 - added `scripts/valgrind` with a helper script and suppression file to
   ignore common third-party problems. [#2511]

 - revised `nut.exe` (the NUT for Windows wrapper for all-in-one service)
   to be more helpful with command-line use (report that it failed to start
   as a service, have a help message, pass debug verbosity to launched NUT
   programs...) and add a man page for it. [issue #2432, PR #2446]

 - the `PyNUTClient` module should no longer rely on presence of a `telnetlib`
   module in the build or execution environment (deprecated in Python 3.11,
   removed since Python 3.13). [#2183]

 - enabled installation of built single-file PDF and HTML (including man page
   renditions) under the configured `docdir`. It seems previously they were
   only built (if requested) but not installed via `make`, unlike the common
   man pages which are delivered automatically. [#2445]
+
   NOTE: The `html-chunked` documents are currently still not installed.

 - added support to `./configure --with-doc=man=dist-auto` to use distributed
   manual page files if present; only fall back to build them if we can. [#2473]

 - added a `make distcheck-light-man` recipe to require verification that the